--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "firebase": "^9.15.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.6.2",
+    "redux": "^4.2.1",
+    "redux-logger": "^3.0.6",
     "sass": "^1.57.1",
     "styled-components": "^5.3.6",
     "vite-plugin-svgr": "^2.4.0"
