--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@stripe/react-stripe-js": "^1.16.5",
+    "@stripe/stripe-js": "^1.48.0",
+    "dotenv": "^16.0.3",
     "firebase": "^9.15.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -19,6 +22,7 @@
     "redux-persist": "^6.0.0",
     "reselect": "^4.1.7",
     "sass": "^1.57.1",
+    "stripe": "^11.14.0",
     "styled-components": "^5.3.6",
     "vite-plugin-svgr": "^2.4.0"
   },
